// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.config.edpaggregator;

option java_package = "org.wfanet.measurement.config.edpaggregator";
option java_multiple_files = true;
option java_outer_classname = "StorageParamsProto";

// Details for data written by an EDP Aggregator Cloud Function
message StorageParams {
  // Config for data written to GCS
  message GcsStorage {
    // The GCS project id. Optional.
    string project_id = 1;
    // The GCS bucket name
    string bucket_name = 2;
  }

  // Config for data written to file system
  message FileSystemStorage {}

  // The type of storage
  oneof storage {
    // Used for gcs
    GcsStorage gcs = 3;
    // Used for file system
    FileSystemStorage file_system = 4;
  }
}
